third-party/rust/crates/better_default/1.0.5/tests/compile_fail/generics_missing_default.rs
#![allow(dead_code)]

use better_default::Default;

#[derive(Default)]
enum Enum<T> {
    #[default]
    Variant(T)
}

#[derive(Default)]
enum Enum2<T> {
    #[default]
    Variant {
        field: T
    }
}

#[derive(Default)]
struct Struct<T> {
    field: T
}

fn main() {}